@@ -1,7 +1,5 @@
 package stanford.androidlib.graphics;
 
-/* Class: GRectangle */
-
 import java.io.Serializable;
 
 /**
@@ -9,8 +7,19 @@ import java.io.Serializable;
  * in <code>java.awt</code>.
  */
 public class GRectangle implements Serializable {
+    /**
+     * The serialization code for this class.  This value should be incremented
+     * whenever you change the structure of this class in an incompatible way,
+     * typically by adding a new instance variable.
+     */
+    static final long serialVersionUID = 1L;
 
-/* Constructor: GRectangle() */
+    // private fields
+    private float xc;
+    private float yc;
+    private float myWidth;
+    private float myHeight;
+
     /**
      * Constructs a new empty <code>GRectangle</code>.
      *
@@ -20,7 +29,6 @@ public class GRectangle implements Serializable {
         this(0, 0, 0, 0);
     }
 
-/* Constructor: GRectangle(x, y, width, height) */
     /**
      * Constructs a new <code>GRectangle</code> with the specified coordinates and size.
      *
@@ -37,7 +45,6 @@ public class GRectangle implements Serializable {
         myHeight = height;
     }
 
-/* Constructor: GRectangle(width, height) */
     /**
      * Constructs a <code>GRectangle</code> at the origin with the specified width and height.
      *
@@ -49,7 +56,6 @@ public class GRectangle implements Serializable {
         this(0, 0, width, height);
     }
 
-/* Constructor: GRectangle(pt, size) */
     /**
      * Constructs a new <code>GRectangle</code> with the specified location and size.
      *
@@ -61,7 +67,6 @@ public class GRectangle implements Serializable {
         this(pt.getX(), pt.getY(), size.getWidth(), size.getHeight());
     }
 
-/* Constructor: GRectangle(pt) */
     /**
      * Constructs a new empty <code>GRectangle</code> at the specified location.
      *
@@ -72,7 +77,6 @@ public class GRectangle implements Serializable {
         this(pt.getX(), pt.getY(), 0, 0);
     }
 
-/* Constructor: GRectangle(size) */
     /**
      * Constructs a new <code>GRectangle</code> at the origin with the specified size.
      *
@@ -83,7 +87,6 @@ public class GRectangle implements Serializable {
         this(0, 0, size.getWidth(), size.getHeight());
     }
 
-/* Constructor: GRectangle(r) */
     /**
      * Constructs a new <code>GRectangle</code> from an existing one.
      *
@@ -94,7 +97,6 @@ public class GRectangle implements Serializable {
         this(r.xc, r.yc, r.myWidth, r.myHeight);
     }
 
-/* Method: getX() */
     /**
      * Returns the x coordinate of this <code>GRectangle</code>.
      *
@@ -105,7 +107,6 @@ public class GRectangle implements Serializable {
         return xc;
     }
 
-/* Method: getY() */
     /**
      * Returns the y coordinate of this <code>GRectangle</code>.
      *
@@ -116,7 +117,6 @@ public class GRectangle implements Serializable {
         return yc;
     }
 
-/* Method: getWidth() */
     /**
      * Returns the width of this <code>GDimension</code>.
      *
@@ -127,7 +127,6 @@ public class GRectangle implements Serializable {
         return myWidth;
     }
 
-/* Method: getHeight() */
     /**
      * Returns the height of this <code>GDimension</code>.
      *
@@ -138,7 +137,6 @@ public class GRectangle implements Serializable {
         return myHeight;
     }
 
-/* Method: setBounds(x, y, width, height) */
     /**
      * Sets the components of a <code>GRectangle</code> from the specified values.
      *
@@ -148,14 +146,14 @@ public class GRectangle implements Serializable {
      * @param width The width of the rectangle
      * @param height The height of the rectangle
      */
-    public void setBounds(float x, float y, float width, float height) {
+    public GRectangle setBounds(float x, float y, float width, float height) {
         xc = x;
         yc = y;
         myWidth = width;
         myHeight = height;
+        return this;
     }
 
-/* Method: setBounds(pt, size) */
     /**
      * Sets the components of a <code>GRectangle</code> from the specified location and size.
      *
@@ -163,22 +161,20 @@ public class GRectangle implements Serializable {
      * @param pt The location of the upper left corner of the rectangle
      * @param size The dimensions of the rectangle
      */
-    public void setBounds(GPoint pt, GDimension size) {
-        setBounds(pt.getX(), pt.getY(), size.getWidth(), size.getHeight());
+    public GRectangle setBounds(GPoint pt, GDimension size) {
+        return setBounds(pt.getX(), pt.getY(), size.getWidth(), size.getHeight());
     }
 
-/* Method: setBounds(bounds) */
     /**
      * Sets the bounds of one <code>GRectangle</code> equal to that of another.
      *
      * @usage rect.setBounds(bounds);
      * @param bounds A <code>GRectangle</code> specifying the new bounds
      */
-    public void setBounds(GRectangle bounds) {
-        setBounds(bounds.xc, bounds.yc, bounds.myWidth, bounds.myHeight);
+    public GRectangle setBounds(GRectangle bounds) {
+        return setBounds(bounds.xc, bounds.yc, bounds.myWidth, bounds.myHeight);
     }
 
-/* Method: getBounds() */
     /**
      * Returns a new <code>GRectangle</code> whose bounds are the same as this one.
      *
@@ -189,7 +185,6 @@ public class GRectangle implements Serializable {
         return new GRectangle(this);
     }
 
-/* Method: setLocation(x, y) */
     /**
      * Sets the location of the <code>GRectangle</code> to the specified <code>x</code>
      * and <code>y</code> values.
@@ -198,23 +193,22 @@ public class GRectangle implements Serializable {
      * @param x The new x-coordinate for the rectangle
      * @param y The new y-coordinate for the rectangle
      */
-    public void setLocation(float x, float y) {
+    public GRectangle setLocation(float x, float y) {
         xc = x;
         yc = y;
+        return this;
     }
 
-/* Method: setLocation(pt) */
     /**
      * Sets the location of the <code>GRectangle</code> to the specified point.
      *
      * @usage rect.setLocation(pt);
      * @param pt The new location for the rectangle
      */
-    public void setLocation(GPoint pt) {
-        setLocation(pt.getX(), pt.getY());
+    public GRectangle setLocation(GPoint pt) {
+        return setLocation(pt.getX(), pt.getY());
     }
 
-/* Method: getLocation() */
     /**
      * Returns a new <code>GPoint</code> with the location of the rectangle.
      *
@@ -225,7 +219,6 @@ public class GRectangle implements Serializable {
         return new GPoint(xc, yc);
     }
 
-/* Method: translate(dx, dy) */
     /**
      * Adjusts the coordinates of a rectangle by the specified <code>dx</code> and
      * <code>dy</code> offsets.
@@ -234,12 +227,12 @@ public class GRectangle implements Serializable {
      * @param dx The change in the x direction (positive is rightward)
      * @param dy The change in the y direction (positive is downward)
      */
-    public void translate(float dx, float dy) {
+    public GRectangle translate(float dx, float dy) {
         xc += dx;
         yc += dy;
+        return this;
     }
 
-/* Method: setSize(width, height) */
     /**
      * Sets the size of the <code>GRectangle</code> to the specified values.
      *
@@ -247,23 +240,22 @@ public class GRectangle implements Serializable {
      * @param width The new width of the rectangle
      * @param height The new height of the rectangle
      */
-    public void setSize(float width, float height) {
+    public GRectangle setSize(float width, float height) {
         myWidth = width;
         myHeight = height;
+        return this;
     }
 
-/* Method: setSize(size) */
     /**
      * Sets the size of the <code>GRectangle</code> to the specified dimension.
      *
      * @usage rect.setSize(size);
      * @param size The new dimensions of the rectangle
      */
-    public void setSize(GDimension size) {
-        setSize(size.getWidth(), size.getHeight());
+    public GRectangle setSize(GDimension size) {
+        return setSize(size.getWidth(), size.getHeight());
     }
 
-/* Method: getSize() */
     /**
      * Returns a new <code>GDimension</code> object with the size of the <code>GRectangle</code>.
      * @usage size = rect.getSize();
@@ -273,7 +265,6 @@ public class GRectangle implements Serializable {
         return new GDimension(myWidth, myHeight);
     }
 
-/* Method: grow(dx, dy) */
     /**
      * Adjusts the edges of a rectangle by the specified <code>dx</code> and <code>dy</code>
      * offsets along each of its borders.
@@ -282,14 +273,14 @@ public class GRectangle implements Serializable {
      * @param dx The offset to extend each of the left and right borders
      * @param dy The offset to extend each of the top and bottom borders
      */
-    public void grow(float dx, float dy) {
+    public GRectangle grow(float dx, float dy) {
         xc -= dx;
         yc -= dy;
         myWidth += 2 * dx;
         myHeight += 2 * dy;
+        return this;
     }
 
-/* Method: isEmpty() */
     /**
      * Returns <code>true</code> if the rectangle is empty.
      *
@@ -300,7 +291,6 @@ public class GRectangle implements Serializable {
         return myWidth <= 0 || myHeight <= 0;
     }
 
-/* Method: contains(x, y) */
     /**
      * Returns <code>true</code> if the <code>GRectangle</code> contains the specified point.
      *
@@ -314,7 +304,6 @@ public class GRectangle implements Serializable {
         return x >= xc && y >= yc && x < xc + myWidth && y < yc + myHeight;
     }
 
-/* Method: contains(pt) */
     /**
      * Returns <code>true</code> if the <code>GRectangle</code> contains the specified point.
      *
@@ -327,7 +316,6 @@ public class GRectangle implements Serializable {
         return contains(pt.getX(), pt.getY());
     }
 
-/* Method: intersects(r2) */
     /**
      * Returns <code>true</code> if <code>r1</code> and <code>r2</code> have a nonempty
      * intersection.
@@ -345,7 +333,6 @@ public class GRectangle implements Serializable {
         return true;
     }
 
-/* Method: intersection(r2) */
     /**
      * Returns the largest rectangle that is contained in both
      * <code>r1</code> and <code>r2</code>.
@@ -363,7 +350,6 @@ public class GRectangle implements Serializable {
         return new GRectangle(x1, y1, x2 - x1, y2 - y1);
     }
 
-/* Method: union(r) */
     /**
      * Returns the smallest rectangle that contains both
      * <code>r1</code> and <code>r2</code>.
@@ -383,7 +369,6 @@ public class GRectangle implements Serializable {
         return new GRectangle(x1, y1, x2 - x1, y2 - y1);
     }
 
-/* Method: add(r) */
     /**
      * Adjusts the bounds of the current <code>GRectangle</code> so that it contains
      * the rectangle represented by the argument.
@@ -391,11 +376,12 @@ public class GRectangle implements Serializable {
      * @usage rect.add(r);
      * @param r A new rectangle to include in this one
      */
-    public void add(GRectangle r) {
-        if (r.isEmpty()) return;
+    public GRectangle add(GRectangle r) {
+        if (r.isEmpty()) {
+            return this;
+        }
         if (isEmpty()) {
-            setBounds(r);
-            return;
+            return setBounds(r);
         }
         float x2 = Math.max(xc + myWidth, r.xc + r.myWidth);
         float y2 = Math.max(yc + myHeight, r.yc + r.myHeight);
@@ -403,9 +389,9 @@ public class GRectangle implements Serializable {
         yc = Math.min(r.yc, yc);
         myWidth = x2 - xc;
         myHeight = y2 - yc;
+        return this;
     }
 
-/* Method: add(x, y) */
     /**
      * Adds the specified point to the rectangle.
      *
@@ -413,10 +399,9 @@ public class GRectangle implements Serializable {
      * @param x The x coordinate of the new point
      * @param y The y coordinate of the new point
      */
-    public void add(float x, float y) {
+    public GRectangle add(float x, float y) {
         if (isEmpty()) {
-            setBounds(x, y, 0, 0);
-            return;
+            return setBounds(x, y, 0, 0);
         }
         float x2 = Math.max(x + myWidth, x);
         float y2 = Math.max(y + myHeight, y);
@@ -424,9 +409,9 @@ public class GRectangle implements Serializable {
         yc = Math.min(y, yc);
         myWidth = x2 - xc;
         myHeight = y2 - yc;
+        return this;
     }
 
-/* Method: hashCode() */
     /**
      * Returns an integer hash code for the rectangle.  The hash code for a
      * <code>GRectangle</code> is constructed from the hash codes from the
@@ -438,14 +423,13 @@ public class GRectangle implements Serializable {
      * @noshow
      */
     public int hashCode() {
-        int hash = new Float((float) xc).hashCode();
-        hash = (37 * hash) ^ new Float((float) yc).hashCode();
-        hash = (37 * hash) ^ new Float((float) myWidth).hashCode();
-        hash = (37 * hash) ^ new Float((float) myHeight).hashCode();
+        int hash = Float.valueOf((float) xc).hashCode();
+        hash = (37 * hash) ^ Float.valueOf((float) yc).hashCode();
+        hash = (37 * hash) ^ Float.valueOf((float) myWidth).hashCode();
+        hash = (37 * hash) ^ Float.valueOf((float) myHeight).hashCode();
         return hash;
     }
 
-/* Method: equals(obj) */
     /**
      * Tests whether two <code>GRectangle</code> objects are equal.
      * Because floating-point values are inexact, this method checks for
@@ -468,7 +452,6 @@ public class GRectangle implements Serializable {
         return true;
     }
 
-/* Method: toString() */
     /**
      * Converts this <code>GRectangle</code> to its string representation.
      *
@@ -480,18 +463,4 @@ public class GRectangle implements Serializable {
         return "[" + (float) xc + ", " + (float) yc + ", "
                 + (float) myWidth + "x" + (float) myHeight + "]";
     }
-
-    /* Private instance variables */
-    private float xc;
-    private float yc;
-    private float myWidth;
-    private float myHeight;
-
-/* Serial version UID */
-    /**
-     * The serialization code for this class.  This value should be incremented
-     * whenever you change the structure of this class in an incompatible way,
-     * typically by adding a new instance variable.
-     */
-    static final long serialVersionUID = 1L;
 }
